--- a/exTra/res/values/strings.xml
+++ b/exTra/res/values/strings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, MainActivity!</string>
     <string name="app_name">ExTra</string>
-
+	<string name="add_expense_button_label">+</string>
+	<string name="graph_button_label">Graphs</string>
+	<string name="monthly_total">Totale mensile: </string>
+	
 </resources>
